compiler/tests/fa/errors/slice_non_array.salam
// انتظار: خطا۰۲۱
// زبان: فارسی
تابع اصلی:
    متغیر مقدار : صحیح = 5
    متغیر نتیجه : خودکار = مقدار[1:2]
    چاپ نتیجه
پایان
